# DNV-hackathon-demo

./: .dockerignore  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
app/: server.py
notebooks/: ChatModel.ipynb  Embeddings.ipynb
